--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,9 +14,13 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 
     packagingOptions {
         jniLibs.useLegacyPackaging true
@@ -42,6 +46,7 @@ dependencies {
     implementation "com.acmerobotics.roadrunner:actions:1.0.1"
     implementation "com.acmerobotics.dashboard:dashboard:0.5.0"
     implementation 'org.ftclib.ftclib:core:2.1.1'
+    implementation 'androidx.core:core-ktx:1.10.1'
 //    implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.6'
 }
 
