--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -37,10 +37,10 @@ dependencies {
     implementation project(':FtcRobotController')
 
 //    implementation "com.acmerobotics.roadrunner:ftc:0.1.25"
-//    implementation "page.j5155.roadrunner:ftc-otos:0.1.14+0.3.1"
-//    implementation "com.acmerobotics.roadrunner:core:1.0.1"
-//    implementation "com.acmerobotics.roadrunner:actions:1.0.1"
-//    implementation "com.acmerobotics.dashboard:dashboard:0.5.0"
+    implementation "page.j5155.roadrunner:ftc-otos:0.1.14+0.3.1"
+    implementation "com.acmerobotics.roadrunner:core:1.0.1"
+    implementation "com.acmerobotics.roadrunner:actions:1.0.1"
+    implementation "com.acmerobotics.dashboard:dashboard:0.5.0"
     implementation 'org.ftclib.ftclib:core:2.1.1'
     implementation 'androidx.core:core-ktx:1.10.1'
 //    implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.6'
