--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,39 +14,50 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
-apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
-    kotlinOptions {
-        jvmTarget = '11'
-    }
-
     packagingOptions {
         jniLibs.useLegacyPackaging true
     }
 }
 
 repositories {
-    maven {
-        url = 'https://maven.brott.dev/'
-    }
-    maven {
-        url = 'https://repo.dairy.foundation/releases'
-    }
-    maven { url = 'https://jitpack.io' }
+    maven {url "https://repo.dairy.foundation/releases"}
 }
 
 dependencies {
     implementation project(':FtcRobotController')
-
-//    implementation "com.acmerobotics.roadrunner:ftc:0.1.25"
-//    implementation "page.j5155.roadrunner:ftc-otos:0.1.14+0.3.1"
-//    implementation "com.acmerobotics.roadrunner:core:1.0.1"
-//    implementation "com.acmerobotics.roadrunner:actions:1.0.1"
-//    implementation "com.acmerobotics.dashboard:dashboard:0.5.0"
-    implementation 'org.ftclib.ftclib:core:2.1.1'
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.6'
-//    implementation 'androidx.core:core-ktx:1.17.0'
+        implementation "org.solverslib:core:0.3.3" // add SolversLib core
+    implementation "org.solverslib:pedroPathing:0.3.2" // pedroPathing
+//    implementation 'androidx.core:core-ktx:1.16.0'
 }
+
+
+//repositories {
+//    maven {
+//        url = 'https://maven.brott.dev/'
+//    }
+//    maven {
+//        url = 'https://repo.dairy.foundation/releases'
+//    }
+//
+//    maven { url = 'https://jitpack.io' }
+////    packagingOptions {
+////        jniLibs.useLegacyPackaging true
+////    }
+//}
+//
+//dependencies {
+//    implementation project(':FtcRobotController')
+////    implementation "com.acmerobotics.roadrunner:ftc:0.1.25"
+////    implementation "page.j5155.roadrunner:ftc-otos:0.1.14+0.3.1"
+////    implementation "com.acmerobotics.roadrunner:core:1.0.1"
+////    implementation "com.acmerobotics.roadrunner:actions:1.0.1"
+////    implementation "com.acmerobotics.dashboard:dashboard:0.5.0"
+//    implementation "org.solverslib:core:0.3.3" // add SolversLib core
+//    implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
+//    implementation 'androidx.core:core-ktx:1.16.0'
+//    implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.6'
+////    implementation 'androidx.core:core-ktx:1.17.0'
+//}
