--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,7 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+    maven { url 'https://jitpack.io' }
     maven { url = "https://mymaven.bylazar.com/releases" }
 }
 
@@ -14,9 +15,12 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:11.0.0'
     implementation 'org.firstinspires.ftc:Vision:11.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-//    implementation "com.bylazar:panels:1.0.5"
-    implementation 'com.pedropathing:ftc:2.0.3'
+
+    implementation 'com.pedropathing:ftc:2.0.5'
     implementation 'com.pedropathing:telemetry:1.0.0'
     implementation 'com.bylazar:fullpanels:1.0.9'
+
+    implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.6'
 }
+
 
