This is some stuff I didn't push from yesterday. Pedro pathing is tuned. We should make an auto to test the tuning.

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -12,8 +12,20 @@
 // Custom definitions may go here
 
 // Include common definitions from above.
+//buildscript {
+//    repositories {
+//        mavenCentral()
+//        maven {
+//            url = 'https://www.matthewo.tech/maven/'
+//        }
+//    }
+//    dependencies {
+//        classpath 'org.team11260:fast-load-plugin:0.1.2'
+//    }
+//}
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+//apply plugin: 'org.team11260.fast-load-plugin'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
@@ -24,12 +36,16 @@ android {
 
 repositories {
     maven {url "https://repo.dairy.foundation/releases"}
+//    maven {
+//        url = 'https://www.matthewo.tech/maven/'
+//    }
 }
 
 dependencies {
     implementation project(':FtcRobotController')
         implementation "org.solverslib:core:0.3.3" // add SolversLib core
     implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
+//    implementation 'org.team11260:fast-load:0.1.2'
 //    implementation 'androidx.core:core-ktx:1.16.0'
 }
 
