--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -43,8 +43,9 @@ repositories {
 
 dependencies {
     implementation project(':FtcRobotController')
-        implementation "org.solverslib:core:0.3.3" // add SolversLib core
-    implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
+//        implementation "org.solverslib:core:0.3.3" // add SolversLib core
+//    implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
+    implementation 'dev.nextftc.extensions:pedro:1.0.0'
 //    implementation 'org.team11260:fast-load:0.1.2'
 //    implementation 'androidx.core:core-ktx:1.16.0'
 }
