--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -1,80 +1,69 @@
+////
+//// build.gradle in TeamCode
+////
+//// Most of the definitions for building your module reside in a common, shared
+//// file 'build.common.gradle'. Being factored in this way makes it easier to
+//// integrate updates to the FTC into your code. If you really need to customize
+//// the build definitions, you can place those customizations in this file, but
+//// please think carefully as to whether such customizations are really necessary
+//// before doing so.
 //
-// build.gradle in TeamCode
 //
-// Most of the definitions for building your module reside in a common, shared
-// file 'build.common.gradle'. Being factored in this way makes it easier to
-// integrate updates to the FTC into your code. If you really need to customize
-// the build definitions, you can place those customizations in this file, but
-// please think carefully as to whether such customizations are really necessary
-// before doing so.
-
-
-// Custom definitions may go here
-
-// Include common definitions from above.
-//buildscript {
-//    repositories {
-//        mavenCentral()
-//        maven {
-//            url = 'https://www.matthewo.tech/maven/'
-//        }
-//    }
-//    dependencies {
-//        classpath 'org.team11260:fast-load-plugin:0.1.2'
+//// Custom definitions may go here
+//
+//// Include common definitions from above.
+////buildscript {
+////    repositories {
+////        mavenCentral()
+////        maven {
+////            url = 'https://www.matthewo.tech/maven/'
+////        }
+////    }
+////    dependencies {
+////        classpath 'org.team11260:fast-load-plugin:0.1.2'
+////    }
+////}
+//apply from: '../build.common.gradle'
+//apply from: '../build.dependencies.gradle'
+////apply plugin: 'org.team11260.fast-load-plugin'
+//
+//android {
+//    namespace = 'org.firstinspires.ftc.teamcode'
+//    packagingOptions {
+//        jniLibs.useLegacyPackaging true
 //    }
 //}
-apply from: '../build.common.gradle'
-apply from: '../build.dependencies.gradle'
-//apply plugin: 'org.team11260.fast-load-plugin'
-
-android {
-    namespace = 'org.firstinspires.ftc.teamcode'
-    packagingOptions {
-        jniLibs.useLegacyPackaging true
-    }
-}
-
-repositories {
-    maven {url "https://repo.dairy.foundation/releases"}
-//    maven {
-//        url = 'https://www.matthewo.tech/maven/'
-//    }
-}
-
-dependencies {
-    implementation project(':FtcRobotController')
-//        implementation "org.solverslib:core:0.3.3" // add SolversLib core
-//    implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
-    implementation 'dev.nextftc.extensions:pedro:1.0.0'
-//    implementation 'org.team11260:fast-load:0.1.2'
-//    implementation 'androidx.core:core-ktx:1.16.0'
-}
-
-
-//repositories {
-//    maven {
-//        url = 'https://maven.brott.dev/'
-//    }
-//    maven {
-//        url = 'https://repo.dairy.foundation/releases'
-//    }
 //
-//    maven { url = 'https://jitpack.io' }
-////    packagingOptions {
-////        jniLibs.useLegacyPackaging true
+//repositories {
+//    maven {url "https://repo.dairy.foundation/releases"}
+////    maven {
+////        url = 'https://www.matthewo.tech/maven/'
 ////    }
 //}
 //
 //dependencies {
 //    implementation project(':FtcRobotController')
-////    implementation "com.acmerobotics.roadrunner:ftc:0.1.25"
-////    implementation "page.j5155.roadrunner:ftc-otos:0.1.14+0.3.1"
-////    implementation "com.acmerobotics.roadrunner:core:1.0.1"
-////    implementation "com.acmerobotics.roadrunner:actions:1.0.1"
-////    implementation "com.acmerobotics.dashboard:dashboard:0.5.0"
-//    implementation "org.solverslib:core:0.3.3" // add SolversLib core
-//    implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
-//    implementation 'androidx.core:core-ktx:1.16.0'
-//    implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.6'
-////    implementation 'androidx.core:core-ktx:1.17.0'
+////        implementation "org.solverslib:core:0.3.3" // add SolversLib core
+////    implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
+////    implementation 'dev.nextftc.extensions:pedro:1.0.0'
+////    implementation 'org.team11260:fast-load:0.1.2'
+////    implementation 'androidx.core:core-ktx:1.16.0'
 //}
+
+
+apply from: '../build.common.gradle'
+apply from: '../build.dependencies.gradle'
+
+android {
+    namespace = 'org.firstinspires.ftc.teamcode'
+
+    packagingOptions {
+        jniLibs.useLegacyPackaging true
+    }
+}
+
+dependencies {
+    implementation project(':FtcRobotController')
+    //    implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
+//    implementation 'dev.nextftc.extensions:pedro:1.0.0'
+}
