--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -65,5 +65,5 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     //    implementation "org.solverslib:pedroPathing:0.3.3" // pedroPathing
-//    implementation 'dev.nextftc.extensions:pedro:1.0.0'
+    implementation 'dev.nextftc.extensions:pedro:1.0.0'
 }
